Upload Form Giao Diện

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,7 +9,54 @@
         <link rel="stylesheet" href="../JS/jquery-3.6.4.min.js" />
         <link rel="stylesheet" href="../JS/bootstrap.min.js" />
     </head>
-    <body class="text-center">
-        <div class="btn btn-outline-warning">HI</div>
+    <body>
+        <div class="container p-0 position-relative border border-dark">
+            <img
+                src="../IMAGES/banner.jpg"
+                alt=""
+                class="img-fluid border-bottom border-dark"
+                style="
+                    height: 300px;
+                    width: 100%;
+                    object-fit: cover;
+                    object-position: top right;
+                "
+            />
+            <h2
+                class="position-absolute text-primary"
+                style="top: 30%; left: 24%"
+            >
+                Tư Vấn Online
+            </h2>
+            <div class="py-3">
+                <a href="#!" class="px-4 text-info">Trang Chủ</a>
+                <a href="#!" class="text-info">Đặt Phòng</a>
+            </div>
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col-2">STT</th>
+                            <th scope="col-2">Mã bệnh nhân</th>
+                            <th scope="col-2">Mật khẩu</th>
+                            <th scope="col-2">Ngày khám</th>
+                            <th scope="col-2">Phụ thu dịch vụ</th>
+                            <th scope="col-2">Chuyên khoa</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="">
+                            <td scope="row">1</td>
+                            <td>123456a</td>
+                            <td>BN-012345</td>
+                            <td>Ngày khám</td>
+                            <td>12/8/2020</td>
+                            <td>Ngoại tổng quát</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <h4 class="pt-3 pb-4 text-center text-muted border-top border-dark">21032471 - Tô Vũ Gia Huy - DHTHKTPM17ATT</h4>
+        </div>
     </body>
 </html>
