--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Tư Vấn Sức Khỏe</title>
         <link rel="stylesheet" href="../CSS/bootstrap.min.css" />
-        <link rel="stylesheet" href="../JS/jquery-3.6.4.min.js" />
-        <link rel="stylesheet" href="../JS/bootstrap.min.js" />
+        <script src="../JS/jquery-3.6.4.min.js"></script>
+        <script src="../JS/bootstrap.min.js"></script>
     </head>
     <body>
         <div class="container p-0 position-relative border border-dark">
@@ -30,7 +30,14 @@
             </h2>
             <div class="py-3">
                 <a href="#!" class="px-4 text-info">Trang Chủ</a>
-                <a href="#!" class="text-info">Đặt Phòng</a>
+                <a
+                    href="#!"
+                    data-toggle="modal"
+                    data-target="#myModal"
+                    id="open"
+                    class="text-info"
+                    >Đặt Phòng</a
+                >
             </div>
             <div class="table-responsive">
                 <table class="table">
@@ -56,7 +63,65 @@
                     </tbody>
                 </table>
             </div>
-            <h4 class="pt-3 pb-4 text-center text-muted border-top border-dark">21032471 - Tô Vũ Gia Huy - DHTHKTPM17ATT</h4>
+            <h4 class="pt-3 pb-4 text-center text-muted border-top border-dark">
+                21032471 - Tô Vũ Gia Huy - DHTHKTPM17ATT
+            </h4>
+
+            <!-- Modal -->
+            <div id="myModal" class="modal fade" tabindex="-1" role="dialog">
+                <div class="modal-dialog modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h3 class="modal-title text-dark">Đặt lịch khám online</h3>
+                            <button
+                                type="button"
+                                class="close"
+                                data-dismiss="modal"
+                                aria-label="Close"
+                            >
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <label for="" class="m-0 font-weight-bold">Mã bệnh nhân</label> 
+                            <input class="border border-2 rounded w-100 py-1 pl-3" type="text" placeholder="Ma benh nhan">
+                            <label for="" class="font-weight-bold text-danger font-italic">(*)BN-YYYYYY</label> 
+                            <br>
+                            <label for="" class="m-0 font-weight-bold">Mật khẩu</label>
+                            <input class="border border-2 rounded w-100 py-1 pl-3" type="text" placeholder="Mat khau">
+                            <label for="" class="font-weight-bold text-danger font-italic">(*)</label>
+                            <br>
+                            <label for="" class="m-0 font-weight-bold">Ngày khám</label>
+                            <input class="border border-2 rounded w-100 py-1 pl-3 text-muted" type="date">
+                            <label for="" class="font-weight-bold text-danger font-italic">(*)</label>
+                            <br>
+                            <label for="" class="font-weight-bold">Loại dịch vụ</label> <br>
+                            <input class="ml-4" type="checkbox" style="width: auto;">Khám bênh theo yêu cầu
+                            <input class="w" type="checkbox" style="width: auto;">Điều trị người ngoại trú
+                            <input class="w" type="checkbox" style="width: auto;">Bác sĩ theo yêu cầu
+                            <br>
+                            <label for="" class="mt-3 font-weight-bold">Chuyên khoa</label>
+                            <select name="" id="" class="w-100 border border-2 rounded py-1 pl-3">
+                                <option value="">Ngoại tổng quát</option>
+                                <option value="">Nội soi</option>
+                                <option value="">Chuẩn đoán</option>
+                            </select>
+                            <button type="button" class="btn btn-info mt-3">
+                               Đặt lịch
+                            </button>
+                        </div>
+                        <div class="modal-footer">
+                            <button
+                                type="button"
+                                class="btn btn-info"
+                                data-dismiss="modal"
+                            >
+                                Close
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
